--- a/js_block/package.json
+++ b/js_block/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "js_softcorp",
-  "version": "0.0.14",
+  "name": "js_blocks_io",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
