--- a/js_block/package.json
+++ b/js_block/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "js_blocks_io",
-  "version": "0.0.6",
+  "name": "js_softcorp_blocks",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
