--- a/dart_block/pubspec.yaml
+++ b/dart_block/pubspec.yaml
@@ -1,16 +1,14 @@
-name: dart_block
-description: A simple command-line application.
+name: dart_softcorp_blocks
+description: gRPC files from softcorp blocks
 version: 0.0.1
-# homepage: https://www.example.com
+homepage: https://github.com/softcorp-io
 
 environment:
   sdk: '>=2.16.2 <3.0.0'
 
-
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  protobuf: ^2.0.1
+  grpc: ^3.0.2
 
 dev_dependencies:
   lints: ^1.0.0
-  protobuf: ^2.0.1
-  grpc: ^3.0.2
