--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -101,10 +101,10 @@ jobs:
         run: git status
 
       - name: Set github name and email
-        run: git config --global user.email "dev@softcorp.io" && git config --global user.name "Softcorp Automation"
+        run: git config --global user.email "dev@nuntio.io" && git config --global user.name "Nuntio Automation"
 
       - name: Add git credentials
-        run: git remote set-url --push origin https://sinbad-io:$GITHUB_TOKEN@github.com/softcorp-io/block-proto
+        run: git remote set-url --push origin https://sinbad-io:$GITHUB_TOKEN@github.com/io-nuntio/block-proto
 
       - name: Git commit
         run: git commit -am "updated protobuf files"
