--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -79,8 +79,9 @@ jobs:
       - name: Move grpc-web
         run: sudo mv ./protoc-gen-grpc-web-1.3.0-linux-x86_64 $HOME/.local/bin/protoc-gen-grpc-web && chmod +x $HOME/.local/bin/protoc-gen-grpc-web
 
-      #- name: Validate grpc-web is installed correctly
-      #  run: grpc-web --version
+      # clone x library
+      - name: Clone Nuntio x
+        run: git clone git@github.com:nuntiodev/x.git
 
       # Build internal proto files
       - name: Build proto
