--- a/dart_hera/pubspec.yaml
+++ b/dart_hera/pubspec.yaml
@@ -1,6 +1,6 @@
-name: nuntio_blocks
-description: gRPC files for nuntio blocks
-version: 0.0.21
+name: hera_client
+description: gRPC files for Hera
+version: 0.0.1
 homepage: https://github.com/nuntiodev
 
 environment:
